Fixed date alignment in post list

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -182,6 +182,14 @@
     display: inline;
 }
 
+.post-meta-date {
+    width: 112px; text-align: right; display: inline-block;
+}
+
+.post-meta-categories{
+    float:right;
+}
+
 
 
 /**
